# mlwq

./: .gitignore  .gitmodules  README.md  mypy.ini  pyproject.toml
docs/: 1- MLWQ_ Efficient Small Language Model Deployment via Multi-Level Weight Quantization.md  reproducibility.md
mlwq/: __init__.py  bpll.py  datautils.py  eval_ppl_utils.py  mlwq_gptq.py  requirements.txt  run.py
mlwq/model_utils/: LMClass.py  __init__.py
mlwq/scripts/: help.sh  llama.sh  reproduce_opt.sh  run-llamaModel.sh
mlwq/utils/: __init__.py  bit_means.py  measure_memory.py  mixed_quantizer.py  quantization_impact.py  reconstruct.py  watch_performance.py
tests/: test_bpll.py  test_quantization.py  test_watch_performance.py
