[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwq-repro"
version = "0.1.0"
description = "Reproducible Python implementation of the MLWQ quantization workflow."
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlwq*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
